modified homepage for CSCU details

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ---
 layout: bootcamp
 root: .
-venue: NESCent
-address: 2024 W. Main Street, Suite A200, Durham, NC
+venue: Cornell University
+address: Mann Library, Room B30A, 237 Mann Drive, Ithaca, NY
 country: United-States
-humandate: May 8-9, 2014
+humandate: Jan 15-16, 2015
 humantime: 9:00 am - 5 pm
-startdate: 2014-05-08
-enddate: 2014-05-09
+startdate: 2015-01-15
+enddate: 2015-01-016
 latlng: 36.0080203,-78.9232326
-registration: open
-instructor: ["Karen Cranston (NESCent)", "Hilmar Lapp (NESCent)", "Tracy Teal (BEACON)", "Ethan White (Utah State U.)"]
-assistant: ["Darren Boss (iPlant)", "Matt Collins (iDigBio)", "Deb Paul (iDigBio)", "Mike Smorul (SESYNC)"] 
-contact: datacarpentry@nescent.org
-raw: raw.github.com/nescent/2014-05-08-datacarpentry/gh-pages
+registration: restricted
+instructor: ["Erika Mudrak (CSCU)", "Jeramia Ory (Kings College)", "Emily Davenport (Cornell)"]
+assistant: [] 
+contact: mudrak@cornell.edu
+raw: raw.github.com/emudrak/2015-01-15-cornell/gh-pages
 eventbrite: 11257077221
 ---
 <!--
