changes to locations info

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ humandate: Jan 15-16, 2015
 humantime: 9:00 am - 5 pm
 startdate: 2015-01-15
 enddate: 2015-01-016
-latlng: 36.0080203,-78.9232326
+latlng: 42.448938, -76.476148
 registration: restricted
 instructor: ["Erika Mudrak (CSCU)", "Jeramia Ory (Kings College)", "Emily Davenport (Cornell)"]
 assistant: [] 
 contact: mudrak@cornell.edu
 raw: raw.github.com/emudrak/2015-01-15-cornell/gh-pages
-eventbrite: 11257077221
+eventbrite:
 ---
 <!--
     Edit the values in the parameter block above to be appropriate for your bootcamp.
@@ -82,7 +82,7 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
   NESCent has <a href="http://www.nescent.org/about/directions.php" target="_blank">directions on its website</a>; or get directions with
   <a href="http://www.openstreetmap.org/?mlat={{ page.latlng | replace:',','&mlon=' }}&zoom=16">OpenStreetMap</a>
   or
-  <a href="http://maps.google.com/maps?q={{ page.latlng }}">Google Maps</a>.
+  <a href="http://maps.google.com/maps?q={{ page.latlng }}">Google Maps</a>.  Within Mann Library, B30A Classroom is in the basement as you exit the elevators.  See <a href="http://smartmap.mannlib.cornell.edu/location/b30a" target="_blank"> the floor plan </a>. 
 </p>
 {% endif %}
 
