moved NSCENT location info

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 <p>
   <strong>Where:</strong>
   {{ page.address }}.
-  NESCent has <a href="http://www.nescent.org/about/directions.php" target="_blank">directions on its website</a>; or get directions with
+  Get directions with
   <a href="http://www.openstreetmap.org/?mlat={{ page.latlng | replace:',','&mlon=' }}&zoom=16">OpenStreetMap</a>
   or
   <a href="http://maps.google.com/maps?q={{ page.latlng }}">Google Maps</a>.  Within Mann Library, B30A Classroom is in the basement as you exit the elevators.  See <a href="http://smartmap.mannlib.cornell.edu/location/b30a" target="_blank"> the floor plan </a>. 
