--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ instructor: ["Ian Munoz (SESYNC)", "Mike Smorul (SESYNC)"]
 assistant: [] 
 contact: msmorul@sesync.org
 raw: raw.github.com/sesync-ci/2015-01-15-umd/gh-pages
-eventbrite:
+eventbrite: https://www.eventbrite.com/e/umd-data-carpentry-tickets-14847664765
 ---
 <!--
     Edit the values in the parameter block above to be appropriate for your bootcamp.
@@ -122,8 +122,8 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 {% if page.eventbrite %}
 <h2>Registration</h2>
 <p>
-Tuition for the course is free, but prior registration is required for attending it. Registration is through EventBrite, see below.</p> 
-<iframe src="http://www.eventbrite.com/tickets-external?eid={{page.eventbrite}}&ref=etckt" frameborder="0" width="100%" height="210" scrolling="auto"></iframe>
+Tuition for the course is free, but prior registration is required for attending it. In order to provide the best experience class size is limited to 30. Registration is through EventBrite, see below.</p> 
+<a href="{%page.eventbrite%}">Registration Form</a>
 {% endif %}
 
 
