--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: bootcamp
 root: .
 venue: University of Maryland
+sponsors: SESYNC and Maryland's iSchool
 address: 2119 Hornbake South, College Park, MD
 country: United-States
 humandate: Jan 15-16, 2015
