--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 <h2>Acknowledgements &amp; Support</h2>
 <div class="pull-right" style="max-width: 320px; padding-left: 6px;">
 </div>
+<p>This class is supported by the National Socio-Environmental Synthesis Center (SESYNC), Maryland's iSchool, and the Center for the Advanced Study of Communities and Information (CASCI)
 <p>
 <a href="http://datacarpentry.org">Data Carpentry</a> is a partnership of several NSF-funded <a href="http://www.nsf.gov/dir/index.jsp?org=BIO" target="_blank">BIO</a> Centers (<a href="http://nescent.org" target="_blank">NESCent</a>, <a href="http://iplantcollaborative.org" target="_blank">iPlant</a>, <a href="http://idigbio.org" target="_blank">iDigBio</a>, <a href="http://beacon-center.org/" target="_blank">BEACON</a> and <a href="http://sesync.org" target="_blank">SESYNC</a>) and <a href="http://software-carpentry.org" target="_blank">Software Carpentry</a>The structure and objectives of the curriculum as well as the teaching style are informed by <a href="http://software-carpentry.org" target="_blank">Software Carpentry</a>.
 </p>
@@ -124,7 +125,7 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 <h2>Registration</h2>
 <p>
 Tuition for the course is free, but prior registration is required for attending it. In order to provide the best experience class size is limited to 30. Registration is through EventBrite, see below.</p> 
-<a href="{%page.eventbrite%}">Registration Form</a>
+<a href="{{page.eventbrite}}">Registration Form</a>
 {% endif %}
 
 
