--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 -->
 <p>
   <strong>Who:</strong>
-  The course is aimed at graduate students, postdocs, research staff, and other researchers. 
+  The course is aimed at doctoral students, postdocs, research staff, and other researchers. 
 </p>
 
 <!--
