Fixing fields in YAML header to conform to site requirements
1.  Removed extraneous '0' from end date.
2.  Removed affiliations from instructor names so that names would match database.
3.  Turned 'assistant' back into 'helper' (but kept titling text in web page the same).

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ country: United-States
 humandate: Jan 15-16, 2015
 humantime: 9:00 am - 5 pm
 startdate: 2015-01-15
-enddate: 2015-01-016
+enddate: 2015-01-16
 latlng: 38.988202,-76.941699
 registration: open
-instructor: ["Ian Munoz (SESYNC)", "Mike Smorul (SESYNC)"]
-assistant: [] 
+instructor: ["Ian Munoz", "Mike Smorul"]
+helper: [] 
 contact: msmorul@sesync.org
 raw: raw.github.com/sesync-ci/2015-01-15-umd/gh-pages
 eventbrite: https://www.eventbrite.com/e/umd-data-carpentry-tickets-14847664765
@@ -59,7 +59,7 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 </p>
 <p>
   <strong>Assistants:</strong>
-  {{page.assistant | join: ', ' %}}
+  {{page.helper | join: ', ' %}}
 
 {% endif %}
 
