Updated helpers list in index.html
Added helper list to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ enddate: 2015-01-16
 latlng: 38.988202,-76.941699
 registration: open
 instructor: ["Ian Munoz", "Mike Smorul"]
-helper: [] 
+helper: ["Donal Heidenblad", "Andrea Wiggins", "Susan Winters"] 
 contact: msmorul@sesync.org
 raw: raw.github.com/sesync-ci/2015-01-15-umd/gh-pages
 eventbrite: https://www.eventbrite.com/e/umd-data-carpentry-tickets-14847664765
